fix: updated team URL to use render domain

--- a/public/admin.html
+++ b/public/admin.html
@@ -212,7 +212,7 @@
 
 <script>
   const socket = io();
-  const SERVER_IP = "192.168.1.70:3000";
+  const SERVER_IP = "quiz-buzzer-vh5t.onrender.com";
 
   socket.emit("register", { role: "admin" });
 
