add mongo auth and login system

--- a/public/admin.html
+++ b/public/admin.html
@@ -160,6 +160,12 @@
 <div class="container">
 
   <h1>Quiz Admin Panel</h1>
+  <div style="text-align:right;margin-bottom:10px;">
+  <a href="/logout" style="color:white;text-decoration:none;font-size:0.9rem;">
+    Logout
+  </a>
+</div>
+
 
   <!-- ADD TEAM -->
   <div class="card">
