Fix filename case for Render

--- a/public/admin.html
+++ b/public/admin.html
@@ -197,7 +197,7 @@
 
   <div class="card">
     <div id="status">Status: Idle</div>
-    <div id="firstBuzzer" style="font-weight:bold;margin-top:5px;">First Buzzer: None</div>
+    <div id="firstBuzzer" style="font-weight:bold;margin-top:5px;">First Buzzer is: None</div>
 
     <!-- Sound control (admin only) -->
     <div class="sound-control">
